# zzabis

./: .gitignore  CLAUDE.md  README.md  ZZABIS.command  ai_agent.py  build_mac.sh  build_windows.bat  commands.py  config.py  database.py  install.command  macvoice.py  main.py  pyproject.toml  requirements.txt  run.sh  settings_dialog.py  setup.py  setup_permissions.py  speech_gemini.py  speech_openai.py  start_jarvis.sh  ui.py  zzabis.spec
